# bf-to-llvm-compiler

./: .gitignore  Brainfuck.cpp  Brainfuck.hpp  CMakeLists.txt  Code.hpp  Compiler.hpp  CompilerManager.cpp  CompilerManager.hpp  LICENSE  LLVMCode.cpp  LLVMCode.hpp  LLVMCode.hpp.gch  LLVMCompiler.cpp  LLVMCompiler.hpp  Makefile  Memory.hpp  README.md  important.ll  main.cpp  new.ll  old.ll  test.ll  test.s  test_file.cpp  to_cpp_test.cpp
commands/: add copy.hpp  add.hpp  call.hpp  label.hpp  label_for.hpp  load.hpp  ptr.hpp  store.hpp  sub.hpp
instructions/: Instruction.hpp
instructions/llvm/: AssignInstruction.cpp  AssignInstruction.hpp  CallGetchar.cpp  CallGetchar.hpp  CallPutchar.cpp  CallPutchar.hpp  CompareInstruction.cpp  CompareInstruction.hpp  DecrementInstruction.hpp  IncrementInstruction.cpp  IncrementInstruction.hpp  IntToPtr.cpp  IntToPtr.hpp  JumpTo.cpp  JumpTo.hpp  JumpToIf.cpp  JumpToIf.hpp  LLVMInstruction.hpp  LabelMark.cpp  LabelMark.hpp  LoadInstruction.cpp  LoadInstruction.hpp  PtrToInt.cpp  PtrToInt.hpp  StoreInstruction.cpp  StoreInstruction.hpp
old/: old.cpp
variables/: LLVMCountedVariable.cpp  LLVMCountedVariable.hpp  LLVMForLabel.cpp  LLVMForLabel.hpp  LLVMLabel.cpp  LLVMLabel.hpp  LLVMVariable.cpp  LLVMVariable.hpp  Types.hpp  Variable.hpp
